<?xml version="1.0"?>
<package>
  <name>all_in_one</name>
  <version>0.0.0</version>
  <description>The all_in_one package</description>

  <maintainer email="dyros-vehicle@todo.todo">dyros-vehicle</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>tf</run_depend>


  <export>
  </export>
</package>
