<?xml version="1.0"?>
<package format="2">
  <name>dbw_mkz_vision_sim</name>
  <version>1.0.3</version>
  <description>
    Simple lane detection for Gazebo to simulate lane keeping behavior
  </description>
  
  <license>Proprietary</license>
  <author email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</author>
  <maintainer email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</maintainer>
  <url type="website">http://dataspeedinc.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dbw_mkz_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
